# grounded-agent

./: .gitignore  PROJECT_OVERVIEW.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-destructive.sh
data/: test_input.txt
data/diary/: 2026-03-16.md
data/reports/: report_20260316_021949.md
data/sessions/: ecc_persona_cli_v1_a3729a94e09b.json  ecc_persona_llm_v1_683797875393.json  ecc_scaffold_v1_b8b8a4c59db8.json  ecc_x_post_live_v1_411cf504bec3.json  ecc_x_post_v1_d8729a096bbd.json
docs/: benchmark.md  current_status.md  decisions.md  protocol.md  workflow_for_chatgpt.md
docs/persona/: anti_patterns.md  growth_engine.md  personality_seed.md  phases.md  system_prompt_phase0.md  tech_stack.md
docs/prompts/: report_gen_v1.md
scripts/: install-schedule.sh  persona-autopost.plist
src/: __init__.py  __main__.py  config.py  models.py
src/logger/: session_logger.py
src/persona/: __init__.py  __main__.py  bluesky.py  cli.py  compose.py  core.py  llm.py  memory.py  outbox.py  platform.py  state.py  x_client.py
src/report/: __init__.py  generator.py
tests/: conftest.py  test_autopost.py  test_bluesky.py  test_compose.py  test_core.py  test_llm.py  test_memory.py  test_models.py  test_outbox.py  test_persona_cli.py  test_post_cmd.py  test_report.py  test_session_logger.py  test_state.py  test_x_client.py
